# Numerical-Analysis-1

./: CMakeLists.txt  README.md  bisection.cpp  bisectionPlus.cpp  cholesky.cpp  f.cpp  gauss.cpp  gauss_seidel.cpp  googleArray.cpp  googleArrayPluss.cpp  newtonRaphson.cpp  newtonRaphsonPluss.cpp  secant.cpp  secantPlus.cpp
